--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=r
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
