--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #1
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=r
+spring.datasource.password=abc
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
